--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,5 @@
     <dimen name="_1dp">1dp</dimen>
     <dimen name="_16sp">16sp</dimen>
     <dimen name="_8dp">8dp</dimen>
+    <dimen name="_18dp">18dp</dimen>
 </resources>
